<resources>
    <string name="app_name">RickAndMorty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="characters">Characters</string>
    <string name="episodes">Episodes</string>
    <string name="locations">Locations</string>
    <string name="load_error">Loading Error</string>
    <string name="try_again">Please try again</string>
    <string name="species">"Species: "</string>
    <string name="gender">"Gender: "</string>
    <string name="status">"Status: "</string>
    <string name="Name">Morty Smith</string>
    <string name="location">Location</string>
    <string name="genderDetails">Gender</string>
    <string name="origin">Origin</string>
    <string name="statusDetails">Status</string>
    <string name="speciesDetails">Species</string>
    <string name="planet">Planet</string>
    <string name="dimension">Dimension</string>
    <string name="type">Type</string>
    <string name="planets">Planet</string>
    <string name="dimensions">Dimension:</string>
    <string name="name">Name</string>
    <string name="check_network">Check Network Settings</string>
    <string name="saved_data_showed">Saved data has been shown, to update check your internet connection</string>
    <string name="error">Error</string>
    <string name="emptyData">Empty Data. Please connect to the Internet, and refresh page!</string>
    <string name="character_name">Character Name</string>
    <string name="alive">Alive</string>
    <string name="dead">Dead</string>
    <string name="status_fr">Status</string>
    <string name="unknown">Unknown</string>
    <string name="gender_fr">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="genderless">Genderless</string>
    <string name="apply">Apply</string>
    <string name="clear">Clear</string>
</resources>