<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/marginStartEnd">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/character_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/characterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />

    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/status_fr" />

    <RadioGroup
        android:id="@+id/rg_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb_alive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alive" />

        <RadioButton
            android:id="@+id/rb_dead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dead" />

        <RadioButton
            android:id="@+id/rb_unknown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unknown" />
    </RadioGroup>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/gender_fr" />



    <RadioGroup
        android:id="@+id/rg_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="">

        <RadioButton
            android:id="@+id/rb_male"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/rb_female"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/female" />

        <RadioButton
            android:id="@+id/rb_unknown_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unknown" />
        <RadioButton
            android:id="@+id/rb_genderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/genderless" />
    </RadioGroup>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <Button
        android:id="@+id/button_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginEnd="8dp"
        android:text="@string/clear" />

    <Button
        android:id="@+id/button_apply"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply" />

        </LinearLayout>

</LinearLayout>