<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_color"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/locationType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/planets"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#6E798C"
            android:textSize="@dimen/textSizeDefault" />

        <TextView
            android:id="@+id/locationName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            tools:text="World" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:layout_marginEnd="4dp"
            android:textSize="@dimen/textSizeDefault"
            android:text="@string/dimensions" />

        <TextView
            android:id="@+id/locationDimension"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:textSize="@dimen/textSizeDefault"
            tools:text="Cronenberg"/>

            </LinearLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/charactersTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginStartEnd"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/characters"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_characters"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/charactersTV"
            tools:listitem="@layout/characters_item_rv" />

        <include
            android:id="@+id/loadStateView"
            layout="@layout/load_state_messaage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
